JsonObjectMapperTaskRelease